--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <title>Create your Cocktail</title>
+    <title>Cocktailsuche</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
